Typicode_Todos_Mini_Project

--- a/JS_Crash_Course/80_Fetch_And_Async_Await/02_Random_User_Project/spinner.css
+++ b/JS_Crash_Course/80_Fetch_And_Async_Await/02_Random_User_Project/spinner.css
@@ -41,7 +41,12 @@
     from {
         transform: rotate(0deg);
     }
-    to{
+    to {
+        transform: rotate(359deg);
+    }
+}
+@keyframes anim-spinner {
+    from {
         transform: rotate(0deg);
     }
     to {
