--- a/Ecommerce Website With HTML CSS JavaScript/style.css
+++ b/Ecommerce Website With HTML CSS JavaScript/style.css
@@ -662,6 +662,11 @@ footer .copyright {
     padding: 14px;
 }
 
+.blog-header h2,
+p {
+    color: #fff;
+}
+
 #blog {
     padding: 150px 150px 0 150px;
 }
@@ -727,6 +732,56 @@ footer .copyright {
 }
 
 /* About Page */
+
+.about-header {
+    background-image: url(Images/about/banner.png);
+    width: 100%;
+    height: 40vh;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 14px;
+}
+
+.about-header h2 {
+    color: #fff;
+}
+
+#about-head {
+    display: flex;
+    align-items: center;
+}
+
+#about-head p {
+    color: #000;
+}
+
+#about-head div {
+    padding-left: 40px;
+}
+
+#about-head img {
+    width: 50%;
+    height: auto;
+}
+
+#about-app {
+    text-align: center;
+}
+
+#about-app .video {
+    width: 70%;
+    height: 100%;
+    margin: 30px auto 0 auto;
+}
+
+#about-app .video video {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
 
 /* Contact Page */
 
@@ -931,6 +986,25 @@ footer .copyright {
     }
 
     #blog .blog-details {
+        width: 100%;
+    }
+
+    /* About Page */
+
+    #about-head {
+        flex-direction: column;
+    }
+
+    #about-head img {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    #about-head div {
+        padding-left: 0px;
+    }
+
+    #about-app .video {
         width: 100%;
     }
 }
